# SysTrayBingo

./: .clang-format  CMakeLists.txt  README.md
cmake/: Documentation.cmake  Documentation.doxyfile.in  Package.cmake  PackageConfig.cmake.in
include/MyProject/MyInterface/: IMyClass.h
include/MyProject/MyLibrary/: MyClass.h
include/MyProject/MySubLibrary/: MySubClass.h
include/SysTrayBingo/Data/: Bingo.h  Item.h
include/SysTrayBingo/Gui/: BingoWidget.h  ItemAction.h  ItemLabel.h
src/: CMakeLists.txt
src/MyProject/: CMakeLists.txt
src/MyProject/MyExecutable/: CMakeLists.txt  MyExecutable.cpp
src/MyProject/MyInterface/: CMakeLists.txt
src/MyProject/MyLibrary/: CMakeLists.txt  MyClass.cpp
src/MyProject/MySubLibrary/: CMakeLists.txt  MySubClass.cpp
src/SysTrayBingo/: CMakeLists.txt
src/SysTrayBingo/App/: CMakeLists.txt  Main.cpp
src/SysTrayBingo/Data/: Bingo.cpp  CMakeLists.txt  Item.cpp
src/SysTrayBingo/Gui/: BingoWidget.cpp  CMakeLists.txt  ItemAction.cpp  ItemLabel.cpp
test/MyProject/: CMakeLists.txt
test/MyProject/MyTests/: CMakeLists.txt  MyTest.cpp  MyTest.h  MyTest_MyClass.cpp  MyTest_MySubClass.cpp
ui/: Resources.qrc
